Overflow fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -180,12 +180,12 @@ section {
 .flexbox {
   // background-color: pink;
   display: flex;
-  height: auto;
+  min-height: 100vh;
   width: 100%;
   max-width: 100%;
   flex-direction: column;
   align-items: center;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .col1 {
